# SOEM

./: CMakeLists.txt  start_rtnet.sh
osal/linux/: osal.c
osal/xenomai/: osal.c  osal.c.bak
oshw/xenomai/: nicdrv.c  oshw.h
soem/: ethercatmain.c
test/linux/dv_test/: CMakeLists.txt  dv_test.c
test/linux/simple_test/: CMakeLists.txt  simple_test.c
test/linux/slaveinfo/: slaveinfo.c
test/xenomai/: CMakeLists.txt  raw-ethernet.c  thesis.c  xeno_main.c
